2003-10-08  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/po/sv.po: Typo in keyword. Fixes 820054.

2003-10-07  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/Verify.py: handle different calendars properly
	* src/FamilyView.py: fix references to add_to_person_list

2003-10-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/GraphViz.py (GraphVizDialog.get_report_filters):
	Make static Descendant and Ancestral filters inclusive. Fixes 819390.
	* src/plugins/FtmStyleDescendants.py (write_report): Change from 
	partial phrases to the complete phrases. Consider all cases (birth 
	date/place, death date/place, gender). Closes 810904, 810905. 
	* src/plugins/FtmStyleAncestors.py (write_report): Likewise.
	* src/plugins/Verify.py (on_apply_clicked): Detect homosexual 
	marriage only if the spouses' gender is known and equal. 

2003-10-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WebPage.py: Fixed ID link so that link references are
	not converted to &lt; and &gt;
	* src/plugins/WriteGedcom.py: Fixed undefined reference to ref_text

2003-10-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps_main.py (delete_person_response): Add remove_from_history
	call before deleting the person.
	* src/PeopleView.py (remove_from_history): Add function; 
	(row_changed) Remove extra change_active_person() call.

2003-10-06  Tim Waugh  <twaugh@redhat.com>
	* src/Makefile.am: Ship PeopleView.py and PeopleStore.py.

2003-10-05  Don Allingham  <dallingham@users.sourceforge.net>
	* src/SelectChild.py: handle surname prefixes
	* src/FamilyView.py: handle surname prefixes
	* src/QuickAdd.py: handle surname prefixes
	* src/PeopleView.py: force a selection with a new person
	* src/PeopleStore.py: select correct model

2003-10-05  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PeopleView.py: Correct references to history in gramps_main.
	* src/gramps_main.py: Switch away from separate history submenu.
	* src/gramps.glade: Likewise.
